# oztorch

./: .gitignore  README.md  pyproject.toml
oztorch/: __init__.py  autograd.py  commonTyping.py  dtype.py  function.py  functions.py  size.py  storage.py  tensor.py  tensor_ops.py
test/: run_torch.py  test.py
