[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oztorch"
version = "0.1.0"
authors = [
  { name="Ozaner Hansha", email="ozanerhansha@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ozaner/oztorch"
"Bug Tracker" = "https://github.com/ozaner/oztorch/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]